add startup bash script